Fix theme chooser arrow alignment

--- a/demos/mvc/content/shared/styles/examples.css
+++ b/demos/mvc/content/shared/styles/examples.css
@@ -886,6 +886,7 @@ p#copy
 
 .tc-theme-name
 {
+    vertical-align: middle;
     padding-right: 4px;
     width: 80px;
 }
